<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="30sp"
        />

    <EditText
        android:id="@+id/ip_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/logo"
        android:backgroundTint="@color/teal_200"
        android:inputType="textPersonName"
        android:layout_marginTop="30sp"
        android:layout_marginHorizontal="40sp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor"
        android:hint="@string/hint_ip_input" />

    <EditText
        android:id="@+id/port_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ip_field"
        android:layout_marginHorizontal="40sp"
        android:backgroundTint="@color/teal_200"
        android:ems="10"
        android:hint="@string/hint_port_input"
        android:inputType="phone"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor" />

    <Button
    android:id="@+id/connect_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/port_field"
    android:layout_marginHorizontal="40sp"
    android:layout_marginTop="10dp"
    android:backgroundTint="@color/teal_200"
    android:text="@string/connect_button"
    android:textColor="@color/black" />



    <Button
        android:id="@+id/close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/port_field"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/close_button"
        android:textColor="@color/main_bg"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:id="@+id/user_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/connect_btn"
        android:backgroundTint="@color/teal_200"
        android:inputType="textPersonName"
        android:layout_marginTop="30sp"
        android:layout_marginHorizontal="40sp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor"
        android:hint="@string/hint_user_field" />

    <Button
        android:id="@+id/send_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_field"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="40sp"
        android:backgroundTint="@color/teal_200"
        android:textColor="@color/black"
        android:text="@string/send_btn" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send_btn"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="30sp"
        >

        <TextView
            android:id="@+id/result_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text=""
            android:inputType = "textMultiLine"
            android:textColor="@color/hintColor"
            android:textSize="18sp"
            android:textAlignment="textStart"

            />
    </ScrollView>





</RelativeLayout>